--- a/note/swiftui-property-wrappers.html
+++ b/note/swiftui-property-wrappers.html
@@ -21,18 +21,18 @@
     }
 }
 </pre></div><p>위의 예제는 버튼을 누르면 프로퍼티의 내용이 바뀌는데 이때 텍스트 뷰의 내용도 자동으로 바뀌는 것을 볼 수 있다.</p><p>참고로 예제에서도 볼 수 있다시피 <code>@State</code> 는 <code>private</code> 프로퍼티에만 사용할 수 있다.</p></div></div><div id="outline-container-290f8cae"class="outline-2"><h2 id="290f8cae">@Binding</h2><div class="outline-text-2"id="text-290f8cae"><p><code>@Binding</code> 은 다른 인스턴스 소유의 <code>@State</code> 프로퍼티를 빌려올 때 사용한다.</p><div class="org-src-container"><pre class="src src-swift"><span style="color:#51afef">struct</span> <span style="color:#c678dd">MyToggleButton</span>: View {
-    <span style="color:#51afef">@Binding</span> <span style="color:#51afef">var</span> value: Bool
+    <span style="color:#51afef">@Binding</span> <span style="color:#51afef">var</span> value: <span style="color:#c678dd">Bool</span>
 
     <span style="color:#51afef">var</span> body: <span style="color:#51afef">some</span> View {
         <span style="color:#c678dd">Button</span>(action: {
-            <span style="color:#51afef">self</span>.value.<span style="color:#c678dd">toggle</span>()
-        }, <span style="color:#c678dd">label</span>: {
-            <span style="color:#c678dd">Text</span>(<span style="color:#51afef">self</span>.value ? <span style="color:#98be65">"Hello"</span> : <span style="color:#98be65">"World"</span>)
+            <span style="color:#51afef">self</span>.<span style="color:#c678dd">value</span>.<span style="color:#c678dd">toggle</span>()
+        }, label: {
+            <span style="color:#c678dd">Text</span>(<span style="color:#51afef">self</span>.<span style="color:#c678dd">value</span> ? <span style="color:#98be65">"Hello"</span> : <span style="color:#98be65">"World"</span>)
         })
     }
 }
 
-<span style="color:#51afef">struct</span> ContentView: <span style="color:#c678dd">View</span> {
+<span style="color:#51afef">struct</span> <span style="color:#c678dd">ContentView</span>: View {
     <span style="color:#51afef">@State</span> <span style="color:#51afef">private</span> <span style="color:#51afef">var</span> value = <span style="color:#a9a1e1">false</span>
 
     <span style="color:#51afef">var</span> body: <span style="color:#51afef">some</span> View {
@@ -41,7 +41,7 @@
         }
     }
 }
-</pre></div><p>위의 예제에서 <code>MyToggleButton</code> 의 <code>value</code> 프로퍼티가 <code>@Binding</code> 으로 선언되어 있다. 그리고 이 프로퍼티는 나중에 <code>ContentView</code> 에서 뷰를 생성할 때 <code>value</code> 프로퍼티와 연결된다.</p><p>따라서 이 두 값은 연결되기 때문에 어느 한 쪽의 값이 바뀌면 다른 한 쪽도 값이 동일하게 바뀐다. 또한 뷰도 이 데이터의 변경을 알아채고 역시 알아서 업데이트된다.</p></div></div><div id="outline-container-34f1f38e"class="outline-2"><h2 id="34f1f38e">@ObservedObject</h2><div class="outline-text-2"id="text-34f1f38e"><p><code>@State</code> 의 대표적인 단점은 Value 타입에서만 사용이 가능하다는 점이 다. 즉 클래스 오브젝트의 경우는 <code>@State</code> 나 <code>@Binding</code> 이 불가능하다. 대신 이 경우 <code>@ObservableObject</code> 를 상속받은 클래스의 프로퍼티에 <code>@ObservedObject</code> 라는 Property Wrapper 를 적용해 비슷하게 뷰와 프로퍼티를 연결할 수 있다.</p><div class="org-src-container"><pre class="src src-swift"><span style="color:#51afef">class</span> <span style="color:#c678dd">MyData</span>: ObservableObject {
+</pre></div><p>위의 예제에서 <code>MyToggleButton</code> 의 <code>value</code> 프로퍼티가 <code>@Binding</code> 으로 선언되어 있다. 그리고 이 프로퍼티는 나중에 <code>ContentView</code> 에서 뷰를 생성할 때 <code>value</code> 프로퍼티와 연결된다.</p><p>따라서 이 두 값은 연결되기 때문에 어느 한 쪽의 값이 바뀌면 다른 한 쪽도 값이 동일하게 바뀐다. 또한 뷰도 이 데이터의 변경을 알아채고 역시 알아서 업데이트된다.</p></div></div><div id="outline-container-34f1f38e"class="outline-2"><h2 id="34f1f38e">@ObservedObject</h2><div class="outline-text-2"id="text-34f1f38e"><p><code>@State</code> 의 대표적인 단점은 Value 타입에서만 사용이 가능하다는 점이 다. 즉 클래스 오브젝트의 경우는 <code>@State</code> 나 <code>@Binding</code> 이 불가능하다. 대신 이 경우 <code>@ObservableObject</code> 를 상속받은 클래스의 프로퍼티에 <code>@ObservedObject</code> 라는 Property Wrapper 를 적용해 비슷하게 뷰와 프로퍼티를 연결할 수 있다.</p><div class="org-src-container"><pre class="src src-swift"><span style="color:#51afef">class</span> <span style="color:#c678dd">MyData</span>: <span style="color:#c678dd">ObservableObject</span> {
     <span style="color:#51afef">@Published</span> <span style="color:#51afef">var</span> name = <span style="color:#98be65">"World"</span>
     <span style="color:#51afef">@Published</span> <span style="color:#51afef">var</span> buttonTitle = <span style="color:#98be65">"Switch to Universe"</span>
 
@@ -56,36 +56,36 @@
     }
 }
 
-<span style="color:#51afef">struct</span> ContentView: <span style="color:#c678dd">View</span> {
+<span style="color:#51afef">struct</span> <span style="color:#c678dd">ContentView</span>: View {
     <span style="color:#51afef">@ObservedObject</span> <span style="color:#51afef">var</span> data = <span style="color:#c678dd">MyData</span>()
 
     <span style="color:#51afef">var</span> body: <span style="color:#51afef">some</span> View {
         VStack {
-            <span style="color:#c678dd">Text</span>(<span style="color:#98be65">"Hello, \(</span>data.name<span style="color:#98be65">)!"</span>)
+            <span style="color:#c678dd">Text</span>(<span style="color:#98be65">"Hello, \(</span>data.<span style="color:#c678dd">name</span><span style="color:#98be65">)!"</span>)
                 .<span style="color:#c678dd">padding</span>()
             <span style="color:#c678dd">Button</span>(
-                action: { <span style="color:#51afef">self</span>.data.<span style="color:#c678dd">switchName</span>() },
-                label: { <span style="color:#c678dd">Text</span>(<span style="color:#51afef">self</span>.data.<span style="color:#c678dd">buttonTitle</span>) }
+                action: { <span style="color:#51afef">self</span>.<span style="color:#c678dd">data</span>.<span style="color:#c678dd">switchName</span>() },
+                label: { <span style="color:#c678dd">Text</span>(<span style="color:#51afef">self</span>.<span style="color:#c678dd">data</span>.<span style="color:#dcaeea">buttonTitle</span>) }
             )
         }
     }
 }
-</pre></div><p>다만 클래스의 모든 프로퍼티의 변화를 추적하지는 않는다. 위의 예에서 볼 수 있다시피 추적을 원하는 프로퍼티는 <code>@Published</code> 라는 Property Wrapper를 적용해야 한다.</p></div></div><div id="outline-container-82b540b1"class="outline-2"><h2 id="82b540b1">@EnvironmentObject</h2><div class="outline-text-2"id="text-82b540b1"><p><code>@EnvironmentObject</code> 의 경우 오브젝트라는 이름이 붙은 것처럼 클래스 오브젝트를 추적하기 위한 용도의 Property Wrapper다. 다만 차이가 있다면 공유 인스턴스 형태에 적합하게 사용할 수 있다는 점이 있다.</p><div class="org-src-container"><pre class="src src-swift"><span style="color:#51afef">class</span> <span style="color:#c678dd">SharedData</span>: ObservableObject {
+</pre></div><p>다만 클래스의 모든 프로퍼티의 변화를 추적하지는 않는다. 위의 예에서 볼 수 있다시피 추적을 원하는 프로퍼티는 <code>@Published</code> 라는 Property Wrapper를 적용해야 한다.</p></div></div><div id="outline-container-82b540b1"class="outline-2"><h2 id="82b540b1">@EnvironmentObject</h2><div class="outline-text-2"id="text-82b540b1"><p><code>@EnvironmentObject</code> 의 경우 오브젝트라는 이름이 붙은 것처럼 클래스 오브젝트를 추적하기 위한 용도의 Property Wrapper다. 다만 차이가 있다면 공유 인스턴스 형태에 적합하게 사용할 수 있다는 점이 있다.</p><div class="org-src-container"><pre class="src src-swift"><span style="color:#51afef">class</span> <span style="color:#c678dd">SharedData</span>: <span style="color:#c678dd">ObservableObject</span> {
     <span style="color:#51afef">@Published</span> <span style="color:#51afef">var</span> configName = <span style="color:#98be65">"default"</span>
     ...
 }
 
-<span style="color:#51afef">struct</span> ContentView: <span style="color:#c678dd">View</span> {
+<span style="color:#51afef">struct</span> <span style="color:#c678dd">ContentView</span>: View {
     <span style="color:#51afef">@EnvironmentObject</span> <span style="color:#51afef">var</span> sharedData: SharedData
     ...
 }
 
-<span style="color:#51afef">struct</span> FooView: <span style="color:#c678dd">View</span> {
+<span style="color:#51afef">struct</span> <span style="color:#c678dd">FooView</span>: View {
     <span style="color:#51afef">@EnvironmentObject</span> <span style="color:#51afef">var</span> sharedData: SharedData
     ...
 }
 </pre></div><p>위의 경우 <code>ObservableObject</code> 를 상속받은 클래스를 여러 뷰에서 <code>@EnvironmentObject</code> 형식으로 참조하는 것을 볼 수 있다. 따라서 이름처럼 환경설정 등 여러 곳에서 공유될 만한 데이터를 관리하는 모델로 사용하기 좋다.</p><p>다만 최초 생성을 참조가 시작되기 전에 되어야만 할 것이다. 보통은 해당 뷰를 만들기 전에 오브젝트를 생성하고 이걸 <code>environmentObject()</code> 로 알려주어야 한다.</p><div class="org-src-container"><pre class="src src-swift"><span style="color:#51afef">var</span> sharedData = <span style="color:#c678dd">SharedData</span>()
 ...
-window.rootViewController =
+window.<span style="color:#dcaeea">rootViewController</span> =
     <span style="color:#c678dd">UIHostingController</span>(rootView: <span style="color:#c678dd">ContentView</span>().<span style="color:#c678dd">environmentObject</span>(sharedData))
-</pre></div><p>위 코드가 <code>SharedData</code> 오브젝트를 생성해서 공유를 시작하는 시점이다. 이 코드를 어디에 만들어야 하나 궁금할 수 있는데, <code>SceneDelegate.swift</code> 라는 파일이 보인다면 이 파일 안에서 찾아보자. 아마도 비슷한 곳을 찾을 수 있을 것이다.</p></div></div><div id="outline-container-b586c804"class="outline-2"><h2 id="b586c804">@StateObject</h2><div class="outline-text-2"id="text-b586c804"><p><code>@StateObject</code> 는 새로 추가된 Property Wrapper로 <a href="ios.html">iOS</a> 14, <a href="macos.html">macOS</a> 11 Big Sur 혹은 그 이후 버전에서만 사용이 가능하다. 이 글을 쓰는 이가 아직 테스트용 맥이 없어서 이 부분을 확인하지 못 하여서 일단 제목만 남겨 놓는다.</p><p>추측으로 <code>@ObservedObject</code> 와 비슷하면서도 <code>@State</code> 처럼 <code>private</code> 로만 액세스 가능한 프로퍼티를 구현하는 것이 목적일 것 같다.</p></div></div><div id="outline-container-36637d73"class="outline-2"><h2 id="36637d73">관련된 글</h2><div class="outline-text-2"id="text-36637d73"><ul class="org-ul"><li><a href="swiftui-property-wrapper-tips.html">SwiftUI Property Wrapper 팁 모음</a></li><li><a target="_blank"href="https://sarunw.com/posts/what-is-property-wrappers-in-swift/">🌏What is Property Wrappers in Swift</a></li></ul></div></div><div class="mid-ad-container"><ins class="adsbygoogle mid-ad"style="display:block"data-ad-client="ca-pub-1071465863344332"data-ad-slot="4306465772"data-ad-format="auto"data-full-width-responsive="true"></ins><script>(adsbygoogle=window.adsbygoogle||[]).push({})</script></div><div class="backlinks-container"><hr><h1>이 글을 링크하는 글들</h1><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/swift.html">Swift</a></h2><span class="article-description">스위프트 언어에 대한 소개 및 관련된 글 정리</span><span class="article-link-date"> Updated on 2021년 5월 8일</span></div></div><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/swiftui-property-wrapper-tips.html">SwiftUI Property Wrapper 팁 모음</a></h2><span class="article-description">여러가지 Property Wrapper와 관련된 팁을 정리하는 글</span><span class="article-link-date"> Updated on 2021년 5월 7일</span></div></div><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/swiftui.html">SwiftUI</a></h2><span class="article-description">SwiftUI의 소개와 관련된 글 정리</span><span class="article-link-date"> Updated on 2021년 5월 7일</span></div></div><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/swiftui-errors.html">SwiftUI 오류 유형</a></h2><span class="article-description">SwiftUI 코드를 사용하다 종종 겪게 되는 오류 유형을 정리하는 글</span><span class="article-link-date"> Updated on 2021년 4월 27일</span></div></div></div></section></div><div class="footer-content"><footer>Copyright 2019 ~ 2020. Seorenn all rights reserved.</footer></div><script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-44534026-1")</script></body></html>
+</pre></div><p>위 코드가 <code>SharedData</code> 오브젝트를 생성해서 공유를 시작하는 시점이다. 이 코드를 어디에 만들어야 하나 궁금할 수 있는데, <code>SceneDelegate.swift</code> 라는 파일이 보인다면 이 파일 안에서 찾아보자. 아마도 비슷한 곳을 찾을 수 있을 것이다.</p></div></div><div id="outline-container-b586c804"class="outline-2"><h2 id="b586c804">@StateObject</h2><div class="outline-text-2"id="text-b586c804"><p><code>@StateObject</code> 는 새로 추가된 Property Wrapper로 <a href="ios.html">iOS</a> 14, <a href="macos.html">macOS</a> 11 Big Sur 혹은 그 이후 버전에서만 사용이 가능하다. 이 글을 쓰는 이가 아직 테스트용 맥이 없어서 이 부분을 확인하지 못 하여서 일단 제목만 남겨 놓는다.</p><p>추측으로 <code>@ObservedObject</code> 와 비슷하면서도 <code>@State</code> 처럼 <code>private</code> 로만 액세스 가능한 프로퍼티를 구현하는 것이 목적일 것 같다.</p></div></div><div id="outline-container-36637d73"class="outline-2"><h2 id="36637d73">관련된 글</h2><div class="outline-text-2"id="text-36637d73"><ul class="org-ul"><li><a href="swiftui-property-wrapper-tips.html">SwiftUI Property Wrapper 팁 모음</a></li><li><a target="_blank"href="https://sarunw.com/posts/what-is-property-wrappers-in-swift/">🌏What is Property Wrappers in Swift</a></li></ul></div></div><div class="mid-ad-container"><ins class="adsbygoogle mid-ad"style="display:block"data-ad-client="ca-pub-1071465863344332"data-ad-slot="4306465772"data-ad-format="auto"data-full-width-responsive="true"></ins><script>(adsbygoogle=window.adsbygoogle||[]).push({})</script></div><div class="backlinks-container"><hr><h1>이 글을 링크하는 글들</h1><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/swiftui.html">SwiftUI</a></h2><span class="article-description">SwiftUI의 소개와 관련된 글 정리</span><span class="article-link-date"> Updated on 2021년 5월 11일</span></div></div><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/swift.html">Swift</a></h2><span class="article-description">스위프트 언어에 대한 소개 및 관련된 글 정리</span><span class="article-link-date"> Updated on 2021년 5월 8일</span></div></div><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/swiftui-property-wrapper-tips.html">SwiftUI Property Wrapper 팁 모음</a></h2><span class="article-description">여러가지 Property Wrapper와 관련된 팁을 정리하는 글</span><span class="article-link-date"> Updated on 2021년 5월 7일</span></div></div><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/swiftui-errors.html">SwiftUI 오류 유형</a></h2><span class="article-description">SwiftUI 코드를 사용하다 종종 겪게 되는 오류 유형을 정리하는 글</span><span class="article-link-date"> Updated on 2021년 4월 27일</span></div></div></div></section></div><div class="footer-content"><footer>Copyright 2019 ~ 2020. Seorenn all rights reserved.</footer></div><script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-44534026-1")</script></body></html>
