--- a/note/celery-dist-async-tasks.html
+++ b/note/celery-dist-async-tasks.html
@@ -4,7 +4,7 @@
              broker=<span style="color:#98be65">'redis://redis:6379/0'</span>)
 </pre></div><p>이제 남은 일은 태스크를 코딩하는 일이다. 아래의 코드를 추가로 구현한다.</p><div class="org-src-container"><pre class="src src-python"><span style="color:#ecbe7b">@app.task</span>
 <span style="color:#51afef">def</span> <span style="color:#c678dd">print_task</span>(message):
-    <span style="color:#51afef">print</span>(f<span style="color:#98be65">'print_task: </span>{message}<span style="color:#98be65">'</span>)
+    <span style="color:#51afef">print</span>(f<span style="color:#98be65">'print_task: {message}'</span>)
 </pre></div><p>위의 코드들이 순서대로 <code>app.py</code> 라는 파일에 몽땅 작성되었다고 가정하자.</p></div></div><div id="outline-container-07ba81d8"class="outline-2"><h2 id="07ba81d8">워커(worker) 띄우기</h2><div class="outline-text-2"id="text-07ba81d8"><p>아래 명령으로 워커를 띄울 수 있다.</p><div class="org-src-container"><pre class="src src-bash">celery -A app worker
 </pre></div><p>백그라운드 데몬이 아니라 일반 프로세스처럼 돌아가는데, 요즘은 <a href="docker.html">Docker</a>로 돌리는 경우도 많기 때문에 굳이 백그라운드 데몬으로 돌릴 이유는 없을 것 같기도 하다.</p></div></div><div id="outline-container-c735efc5"class="outline-2"><h2 id="c735efc5">태스크(task) 호출하기</h2><div class="outline-text-2"id="text-c735efc5"><p>이제 원격으로 태스크를 호출해보자. 아래는 <a href="python.html">Python</a> 인터프리터로 호출해 보는 예제다.</p><div class="org-src-container"><pre class="src src-python">&gt;&gt;&gt; <span style="color:#51afef">from</span> app <span style="color:#51afef">import</span> print_task
 &gt;&gt;&gt; print_task.delay(<span style="color:#98be65">'Hello, World!'</span>)
