--- a/note/python-dictionary.html
+++ b/note/python-dictionary.html
@@ -49,7 +49,7 @@ no key
 {<span style="color:#98be65">'lee'</span>: <span style="color:#da8548;font-weight:700">98</span>, <span style="color:#98be65">'john'</span>: <span style="color:#da8548;font-weight:700">100</span>, <span style="color:#98be65">'james'</span>: <span style="color:#da8548;font-weight:700">50</span>, <span style="color:#98be65">'kim'</span>: <span style="color:#da8548;font-weight:700">99</span>}
 </pre></div><p>이건 사실 위의 합치기 두 번째 예제랑 다를 게 없다. 하지만 목적이 좀 다르게 느껴저서 별도의 항목으로 분리했다.</p></div></div><div id="outline-container-b83786de"class="outline-2"><h2 id="b83786de">순회하기</h2><div class="outline-text-2"id="text-b83786de"><p>보통은 아래처럼 모든 키의 리스트(혹은 리스트 제너레이터)를 돌려주는 <code>keys()</code> 메서드를 이용해 모든 키의 값을 읽을 수 있다.</p><div class="org-src-container"><pre class="src src-python">&gt;&gt;&gt; <span style="color:#dcaeea">d</span> = {<span style="color:#98be65">'key'</span>: <span style="color:#98be65">'value'</span>, <span style="color:#98be65">'other'</span>: <span style="color:#da8548;font-weight:700">123</span>}
 &gt;&gt;&gt; <span style="color:#51afef">for</span> k <span style="color:#51afef">in</span> d.keys():
-...     <span style="color:#51afef">print</span>(f<span style="color:#98be65">'</span>{k}<span style="color:#98be65"> = </span>{d.get(k)}<span style="color:#98be65">'</span>)
+...     <span style="color:#51afef">print</span>(f<span style="color:#98be65">'{k} = {d.get(k)}'</span>)
 ...
 <span style="color:#dcaeea">key</span> = value
 <span style="color:#dcaeea">other</span> = <span style="color:#da8548;font-weight:700">123</span>
