--- a/note/electron-basic-setup.html
+++ b/note/electron-basic-setup.html
@@ -26,7 +26,7 @@ npm install --save-dev electron
 app.whenReady().then(createWindow)
 app.on(<span style="color:#98be65">'window-all-closed'</span>, () =&gt; app.quit());
 </pre></div><p>이 코드가 앱이 실행되면 제일 먼저 실행되는 내용이다. 보다시피 <a href="electron.html">Electron</a> 앱의 가장 기본적인 동작을 정의하는 파일이다.</p><p>파일 이름은 꼭 <code>index.js</code> 일 필요는 없지만 이외의 이름을 지을 경우 실행 시 해당 파일명을 옵션으로 넘겨줘야 한다.</p></div></div><div id="outline-container-a0701008"class="outline-2"><h2 id="a0701008">Electron 시작 스크립트</h2><div class="outline-text-2"id="text-a0701008"><p>프로젝트 디렉터리의 <code>package.json</code> 파일을 보면 <code>scripts</code> 항목을 찾을 수 있는데 여기서 <code>start</code> 항목을 수정하거나 만들어주자.</p><div class="org-src-container"><pre class="src src-javascript"><span style="color:#98be65">"start"</span>: <span style="color:#98be65">"electron ."</span>
-</pre></div><p>이렇게 하면 이제 아래와 같은 명령으로 앱을 띄워볼 수 있다.</p><div class="org-src-container"><pre class="src src-bash">npm run start
+</pre></div><p>이렇게 하면 이제 아래와 같은 명령으로 앱을 띄워볼 수 있다.</p><div class="org-src-container"><pre class="src src-bash">yarn run start
 <span style="color:#5b6268"># </span><span style="color:#5b6268">or</span>
-yarn run start
+npm run start
 </pre></div></div></div><div class="mid-ad-container"><ins class="adsbygoogle mid-ad"style="display:block"data-ad-client="ca-pub-1071465863344332"data-ad-slot="4306465772"data-ad-format="auto"data-full-width-responsive="true"></ins><script>(adsbygoogle=window.adsbygoogle||[]).push({})</script></div><div class="backlinks-container"><hr><h1>이 글을 링크하는 글들</h1><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/electron.html">❏ Electron</a></h2><span class="article-description">데스크탑 웹 앱 프레임워크 엘렉트론(Electron)</span><span class="article-link-date"> Updated on 2021년 12월 24일</span></div></div></div></section></div><div class="footer-content"><footer>Copyright 2019 ~ 2020. Seorenn all rights reserved.</footer></div></body></html>
